--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev -p 3301",
     "build": "next build",
     "start": "next start -p 3301",
-    "lint": "next lint"
+    "lint": "next lint",
+    "live": "pm2 start npm --name 'next-stream' -- start",
+    "restart": "pm2 restart 'next-stream'",
+    "clean": "pm2 delete 'next-stream'"
   },
   "dependencies": {
     "@next/font": "13.1.1",
